--- a/css/custom.css
+++ b/css/custom.css
@@ -910,7 +910,7 @@ a:focus {
 /* About Us Page Css */
 
 .banner_section {
-  background: url(../images/about_bg.jpg) top left;
+  background: url(../images/about_bg2.jpg) top left;
   background-size: auto;
   background-size: cover;
   padding: 60px 0px;
